--- a/SocialJournalSwift/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
+++ b/SocialJournalSwift/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
@@ -972,7 +972,7 @@
                                 <rect key="frame" x="16" y="186" width="736" height="55"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="l9P-MW-TF7">
-                                    <rect key="frame" x="0.0" y="0.0" width="735.99999999470185" height="55"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="735.99999999476006" height="55"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Started From the Bottom" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" id="I4A-Jz-f6m">
@@ -1598,7 +1598,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="Qs8-Eh-AgK" kind="push" id="aXJ-vG-G72"/>
+                                            <segue destination="Qs8-Eh-AgK" kind="modal" id="aXJ-vG-G72"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -2211,7 +2211,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="26X-xq-UXv" kind="push" id="oMX-eH-0Ag"/>
+                                            <segue destination="26X-xq-UXv" kind="modal" id="oMX-eH-0Ag"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -2320,10 +2320,10 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="B73-YQ-s57"/>
         <segue reference="hYT-zi-chh"/>
         <segue reference="qPU-hG-sdf"/>
-        <segue reference="cV5-4H-0Bj"/>
+        <segue reference="B73-YQ-s57"/>
         <segue reference="aXJ-vG-G72"/>
+        <segue reference="oMX-eH-0Ag"/>
     </inferredMetricsTieBreakers>
 </document>
